--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@
     --font-size2-title:30px;
     --primary-color:#8200ff;
     --secondary-color:#1c1678;
-    --extra-color:#00d0ff;
+    --extra-color:#8200ff;
+    --sombra-color: #00d0ff;
 }
 
 body {
@@ -151,7 +152,7 @@ nav.bg-navefra ul li a:hover::after{
 
 .cont-foto img{
     width: 400px;
-    margin: 50px 0;
+    margin: 65px 0;
     margin-left: 25px;
 }
 
@@ -183,7 +184,7 @@ nav.bg-navefra ul li a:hover::after{
 }
 
 .sombra{
-    background: var(--extra-color);
+    background: var(--sombra-color);
     width: 270px;
     height: 350px;
     margin: 60px 50px;
@@ -278,7 +279,7 @@ nav.bg-navefra ul li a:hover::after{
 
 .cont-fotos img{
     width: 500px;
-    margin: 20px 0;
+    margin: 40px 0;
 }
 
 
